configure interpreter for IClasspathEntry.CPE_PROJECT